--- a/views/index.ejs
+++ b/views/index.ejs
@@ -66,7 +66,7 @@
                     <button class="btn btn-outline-warning ml-auto" type="button">Vende</button>
                     <a class="nav-link text-black-50" href="#"><i class="fas fa-shopping-basket"></i></a>
                     <a class="nav-link text-black-50 d-none d-md-block" href="#"><i class="far fa-heart"></i></a>
-                    <a class="nav-link text-black-50 d-none d-md-block" href="register.ejs">Registro</i></a>
+                    <a class="nav-link text-black-50 d-none d-md-block" href="./register.ejs">Registro</i></a>
                     <a class="nav-link text-black-50 d-none d-md-block active" href="#">Inicio de Sesión</i></a>
                 </div>
                 <!--nav mobile-->
@@ -80,7 +80,7 @@
                             <a class="nav-link" href="#"><i class="fas fa-home"></i> Inicio<span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="register.ejs"><i class="far fa-user-circle"></i> Registrate</a>
+                            <a class="nav-link" href="./register.ejs"><i class="far fa-user-circle"></i> Registrate</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#"><i class="far fa-heart"></i> Favoritos</a>
