--- a/views/register.ejs
+++ b/views/register.ejs
@@ -27,7 +27,8 @@
     
     <!--css Style-->
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="./public/css/register_style.css">
+    <link rel="stylesheet" href="css/register_style.css">
+
     
     <!--boostrap script-->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
