se  agrega form carga de productos

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -63,7 +63,7 @@
                         </div>
                     </div>
 
-                    <button class="btn btn-outline-warning ml-auto" type="button">Vende</button>
+                    <a href="./form_prod.ejs"><button class="btn btn-outline-warning ml-auto" type="button">Vende</button></a>
                     <a class="nav-link text-black-50" href="#"><i class="fas fa-shopping-basket"></i></a>
                     <a class="nav-link text-black-50 d-none d-md-block" href="#"><i class="far fa-heart"></i></a>
                     <a class="nav-link text-black-50 d-none d-md-block" href="./register.ejs">Registro</i></a>
