--- a/views/index.ejs
+++ b/views/index.ejs
@@ -48,13 +48,16 @@
     <header class="nav-header">
         <div class="navborder">
             <nav class="navbar navbar-expand-lg navbar-light bg-light d-flex">
-                <a class="navbar-brand" href="#">
-                    <img src="img/header/logo_header.svg" width="120" class="d-inline-block align-top" alt="Canilla Libre">
-                </a>
+                
 
                 <!--search / xl-->
-                <div class="d-flex justify-content-end align-items-center ml-auto ">
-                    <div class="input-group mb-3 col box-1">
+                <div class="d-flex justify-content-end align-items-center w-100 ml-auto ">
+                    <a class="navbar-brand" href="#">
+                        <img src="img/header/logo_header.svg" width="120" class="d-inline-block align-top" alt="Canilla Libre">
+                    </a>
+
+                    
+                    <div class="input-group mb-3 col box-1 ml-auto">
                         <input type="text" class="form-control" placeholder="que queres tomar?" aria-label="buscador"
                             aria-describedby="search_header">
                         <div class="input-group-append">
@@ -68,11 +71,14 @@
                     <a class="nav-link text-black-50 d-none d-md-block" href="#"><i class="far fa-heart"></i></a>
                     <a class="nav-link text-black-50 d-none d-md-block" href="./register.ejs">Registro</i></a>
                     <a class="nav-link text-black-50 d-none d-md-block active" href="#">Inicio de Sesión</i></a>
+
+                    <!--nav mobile-->
+                    <button class="navbar-toggler d-sm-block d-md-none" type="button" data-toggle="collapse"
+                        data-target="#menu_desplegable">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
                 </div>
-                <!--nav mobile-->
-                <button class="navbar-toggler d-sm-block d-md-none" type="button" data-toggle="collapse" data-target="#menu_desplegable">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+                
                 <div class="dropdown-divider"></div>
                 <div class="collapse navbar-collapse" id="menu_desplegable">
                     <ul class="navbar-nav mr-auto d-sm-block d-md-none">
