--- a/views/register.ejs
+++ b/views/register.ejs
@@ -28,7 +28,6 @@
     <!--css Style-->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/register_style.css">
-
     
     <!--boostrap script-->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
@@ -44,13 +43,16 @@
     <header class="nav-header">
       <div class="navborder">
         <nav class="navbar navbar-expand-lg navbar-light bg-light d-flex">
-          <a class="navbar-brand" href="#">
-            <img src="img/header/logo_header.svg" width="120" class="d-inline-block align-top" alt="Canilla Libre">
-          </a>
+    
     
           <!--search / xl-->
-          <div class="d-flex justify-content-end align-items-center ml-auto ">
-            <div class="input-group mb-3 col box-1">
+          <div class="d-flex justify-content-end align-items-center w-100 ml-auto ">
+            <a class="navbar-brand" href="/">
+              <img src="img/header/logo_header.svg" width="120" class="d-inline-block align-top" alt="Canilla Libre">
+            </a>
+    
+    
+            <div class="input-group mb-3 col box-1 ml-auto">
               <input type="text" class="form-control" placeholder="que queres tomar?" aria-label="buscador"
                 aria-describedby="search_header">
               <div class="input-group-append">
@@ -62,14 +64,16 @@
             <button class="btn btn-outline-warning ml-auto" type="button">Vende</button>
             <a class="nav-link text-black-50" href="#"><i class="fas fa-shopping-basket"></i></a>
             <a class="nav-link text-black-50 d-none d-md-block" href="#"><i class="far fa-heart"></i></a>
-            <a class="nav-link text-black-50 d-none d-md-block" href="#">Registro</i></a>
+            <a class="nav-link text-black-50 d-none d-md-block" href="./register.ejs">Registro</i></a>
             <a class="nav-link text-black-50 d-none d-md-block active" href="#">Inicio de Sesión</i></a>
+    
+            <!--nav mobile-->
+            <button class="navbar-toggler d-sm-block d-md-none" type="button" data-toggle="collapse"
+              data-target="#menu_desplegable">
+              <span class="navbar-toggler-icon"></span>
+            </button>
           </div>
-          <!--nav mobile-->
-          <button class="navbar-toggler d-sm-block d-md-none" type="button" data-toggle="collapse"
-            data-target="#menu_desplegable">
-            <span class="navbar-toggler-icon"></span>
-          </button>
+    
           <div class="dropdown-divider"></div>
           <div class="collapse navbar-collapse" id="menu_desplegable">
             <ul class="navbar-nav mr-auto d-sm-block d-md-none">
@@ -77,7 +81,7 @@
                 <a class="nav-link" href="#"><i class="fas fa-home"></i> Inicio<span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#"><i class="far fa-user-circle"></i> Registrate</a>
+                <a class="nav-link" href="./register.ejs"><i class="far fa-user-circle"></i> Registrate</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#"><i class="far fa-heart"></i> Favoritos</a>
@@ -175,65 +179,65 @@
     <!--registro/diego-->
     <!-- Section es todo el contenedor -->
     <section class="container">
-      
-      <div  >
-        <h4>Completa tus datos</h4>
-
+      <div  class="row justify-content-center mb-5">
+        
         <!-- formulario nuevo usuario -->
-        <form action="post">
-          <div class="name"><!-- nombre y apellido en la misma linea -->
-          <div class="form-group">
-            <label for="firstname">Nombre</label>
-            <input type="text" class="form-control" id="firstname" aria-describedby="emailHelp" required>
-          </div>
-          <div class="form-group">
-            <label for="lastname">Apellido</label>
-            <input type="text" class="form-control" id="lastname" aria-describedby="emailHelp" required>
-          </div>
-          </div>
-          <!-- email -->
-          <div class="form-group">
-            <label for="exampleInputEmail1">Correo Electronico</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" required>
-          </div>
-          <!-- password -->
-          <div class="form-group">
-            <label for="exampleInputPassword1">Contrasenia (al menos 8 caracteres)</label>
-            <input type="password" class="form-control" id="exampleInputPassword1" required>
-          <div class="checkers">
-          <!-- check obetn informacion -->
-          <div class="form-check">
-            <input class="form-check-input" type="checkbox" value="" id="newsletter">
-            <label class="form-check-label" for="newsletter">
-              Obten las ultimas ofertas, promociones y noticias via email
-            </label>
-          </div>
-          <!-- check terminos y condiciones -->
-          <div class="form-check">
-            <input class="form-check-input" type="checkbox" value="" id="newsletter">
-            <label class="form-check-label" for="newsletter">
-              Al hacer click sobre Registrate, acepto los <a href="http://">terminos de uso</a> y la <a href="http://">Politica de privacidad</a> de Canilla Libre 
-            </label>
-          </div>
-          </div>
-
-          <!-- boton registrarse -->
-          <button type="submit" class="btn btn-primary">Registrate</button>
-          
-          
-        </form>
-        <div class="facebook" >
-          <!-- registrate via facebook -->
-
-          <a class="facebook">
-            <span class="fa fa-facebook"></span> registrate via Facebook
-          </a>
-        </div>
-        <!-- ya tenes una cuenta -->
-        <div class="withcount">
-          <p>Ya tienes una cuenta?<a href="" >Ingresa a tu cuenta</a></p>
-        </div>
-      </div>
+        <div class="col-xs-12 col-sm-12 col-md-7 box_reg">
+          <form action="post m-auto">
+            <h4 class="text-center mb-4">Completa tus datos</h4>
+            <div class="dropdown-divider mb-4"></div>
+            <div class="name"><!-- nombre y apellido en la misma linea -->
+            <div class="form-group">
+              <label for="firstname">Nombre</label>
+              <input type="text" class="form-control" id="firstname" aria-describedby="emailHelp" required>
+            </div>
+            <div class="form-group ml-2">
+              <label for="lastname">Apellido</label>
+              <input type="text" class="form-control" id="lastname" aria-describedby="emailHelp" required>
+            </div>
+            </div>
+            <!-- email -->
+            <div class="form-group">
+              <label for="exampleInputEmail1">Correo Electronico</label>
+              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" required>
+            </div>
+            <!-- password -->
+            <div class="form-group">
+              <label for="exampleInputPassword1">Contraseña (al menos 8 caracteres)</label>
+              <input type="password" pattern=".{8,}" class="form-control" id="exampleInputPassword1" required>
+            <div class="checkers">
+            <!-- check obetn informacion -->
+            <div class="form-check">
+              <input class="form-check-input" type="checkbox" value="" id="newsletter">
+              <label class="form-check-label" for="newsletter">
+                Obten las ultimas ofertas, promociones y noticias via email
+              </label>
+            </div>
+            <!-- check terminos y condiciones -->
+            <div class="form-check">
+              <input class="form-check-input" type="checkbox" value="" id="newsletter">
+              <label class="form-check-label" for="newsletter">
+                Al hacer click sobre Registrate, acepto los <a href="http://">terminos de uso</a> y la <a href="http://">Politica de privacidad</a> de Canilla Libre 
+              </label>
+            </div>
+            </div>
+            <div class="w-100 d-flex justify-content-center mb-4">
+            <!-- boton registrarse -->
+              <button type="submit" class="btn btn-outline-warning d-flex">Registrate</button>
+            </div>
+            <div class="dropdown-divider"></div>
+            <div class="facebook">
+              <!-- registrate via facebook -->
+              <a class="facebook" hre="https://www.facebook.com/"><i class="fab fa-facebook"></i> Registrate vía Facebook</a>
+            </div>
+            <!-- ya tenes una cuenta -->
+            <div class="withcount">
+              <p>Ya tienes una cuenta?<a href="">Ingresa a tu cuenta</a></p>
+            </div>
+            </div>
+            
+          </form>
+        
       
        
     </section>
