--- a/views/form_prod.ejs
+++ b/views/form_prod.ejs
@@ -1,32 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="form_prod.css">
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-      integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-      crossorigin="anonymous"
-    ></script>
-
-    <title>Carga de Productos</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <title>Canilla Libre</title>
+    
+    <!--favicon-->
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="manifest" href="img/favicon/site.webmanifest">
+    <link rel="mask-icon" href="img/favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+    
+    <!--Googlefont LATO 300-400-700-->
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&display=swap" rel="stylesheet">
+    
+    <!--boostrap-->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    
+    <!-- Font Awesome Stylesheet -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
+    
+    <!--css Style-->
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style-franco.css">
+    <link rel="stylesheet" href="ofertas_style.css">
+    <link rel="stylesheet" href="register_style.css">
+    
+    <!--boostrap script-->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   </head>
 
   <body>
@@ -34,13 +45,16 @@
     <header class="nav-header">
       <div class="navborder">
         <nav class="navbar navbar-expand-lg navbar-light bg-light d-flex">
-          <a class="navbar-brand" href="#">
-            <img src="img/header/logo_header.svg" width="120" class="d-inline-block align-top" alt="Canilla Libre">
-          </a>
+    
     
           <!--search / xl-->
-          <div class="d-flex justify-content-end align-items-center ml-auto ">
-            <div class="input-group mb-3 col box-1">
+          <div class="d-flex justify-content-end align-items-center w-100 ml-auto ">
+            <a class="navbar-brand" href="/">
+              <img src="img/header/logo_header.svg" width="120" class="d-inline-block align-top" alt="Canilla Libre">
+            </a>
+    
+    
+            <div class="input-group mb-3 col box-1 ml-auto">
               <input type="text" class="form-control" placeholder="que queres tomar?" aria-label="buscador"
                 aria-describedby="search_header">
               <div class="input-group-append">
@@ -49,17 +63,19 @@
               </div>
             </div>
     
-            <button class="btn btn-outline-warning ml-auto" type="button">Vende</button>
-            <a class="nav-link text-black-50" href="#"><i class="fas fa-shopping-basket"></i></a>
+            <a href="./form_prod.ejs"><button class="btn btn-outline-warning ml-auto" type="button">Vende</button></a>
+            <a class="nav-link text-black-50" href="./product_cart.ejs"><i class="fas fa-shopping-basket"></i></a>
             <a class="nav-link text-black-50 d-none d-md-block" href="#"><i class="far fa-heart"></i></a>
-            <a class="nav-link text-black-50 d-none d-md-block" href="#">Registro</i></a>
+            <a class="nav-link text-black-50 d-none d-md-block" href="./register.ejs">Registro</i></a>
             <a class="nav-link text-black-50 d-none d-md-block active" href="#">Inicio de Sesión</i></a>
+    
+            <!--nav mobile-->
+            <button class="navbar-toggler d-sm-block d-md-none" type="button" data-toggle="collapse"
+              data-target="#menu_desplegable">
+              <span class="navbar-toggler-icon"></span>
+            </button>
           </div>
-          <!--nav mobile-->
-          <button class="navbar-toggler d-sm-block d-md-none" type="button" data-toggle="collapse"
-            data-target="#menu_desplegable">
-            <span class="navbar-toggler-icon"></span>
-          </button>
+    
           <div class="dropdown-divider"></div>
           <div class="collapse navbar-collapse" id="menu_desplegable">
             <ul class="navbar-nav mr-auto d-sm-block d-md-none">
@@ -67,7 +83,7 @@
                 <a class="nav-link" href="#"><i class="fas fa-home"></i> Inicio<span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#"><i class="far fa-user-circle"></i> Registrate</a>
+                <a class="nav-link" href="./register.ejs"><i class="far fa-user-circle"></i> Registrate</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#"><i class="far fa-heart"></i> Favoritos</a>
@@ -162,122 +178,122 @@
       </div>
     </header>
 
-    <div class="card text-white bg-dark mb-3 text-center">
-        <h2>Vende en CanillaLibre.com</h2>
-    </div>
-    
-    <div class="container bg-light"> 
+    <!--ventas/diego -->
+    <section class="ventas">   
+        <div class="categorias-title mt-3">
+          <h2 class="title_categoria border-bottom">Vende en CanillaLibre.com</h2>
+        </div>
         
-        <div>
-            <div class="form-group">
-                <h3>¿Que es lo que estas vendiendo?</h3>
-                <label for="producto">Titulo de anuncio*</label>
-                <input
-                type="text"
-                class="form-control"
-                id="title_prod"
-                placeholder="Introduce el titulo de tu producto"
-                required/>
-            </div>
-            <div>
-                <label for="contact">Numero de Contacto</label>
-                <input
-                type="text"
-                class="form-control"
-                id="contact"
-                placeholder="Introduce tu numero de telefono"
-                />
-            </div>
-        </div>
-        <div class="descripcion form-group">
-            <label for="descripcion_producto">Hace una breve despricion de lo que vas a vender</label>
-            <div>
-                <textarea
-                id="descripcion_producto"
-                rows="4"
-                placeholder="No te olvides datos importantes"
-                class="col-12"
-                
-                ></textarea>
-            </div>
+        <div class="container bg-light mb-5"> 
             
-        </div>
-        <div class="form-group">
-            <h4>Categoria Seleccionada</h4>
             <div>
-                <input type="radio" id="insumo" name="tipo_prod" value="insumo" checked />
-                <label for="insumo">Insumo</label>
-            </div>
-            <div>
-                <input type="radio" id="producto" name="tipo_prod" value="producto" />
-                <label for="producto">Producto</label>
-            </div>
-            <div>
-                <input type="radio" id="otros" name="tipo_prod" value="otros" />
-                <label for="otros">Otros/Cursos/Servicios<label>
-                </div>
-                
-            </div>
-            
-            <div class="valor form-group">
-                <div>
-                    <label for="precio">Precio*
-                    </label>
+                <div class="form-group">
+                    <h3>¿Que es lo que estas vendiendo?</h3>
+                    <label for="producto">Titulo de anuncio*</label>
                     <input
-                    type="number"
+                    type="text"
                     class="form-control"
-                    id="price"
-                    placeholder="Precio"
+                    id="title_prod"
+                    placeholder="Introduce el titulo de tu producto"
                     required/>
                 </div>
-                
                 <div>
-                    <label for="cantidad">Cantidad*</label>
+                    <label for="contact">Numero de Contacto</label>
                     <input
-                    type="number"
+                    type="text"
                     class="form-control"
-                    id="qty"
-                    placeholder="Cantidad"
-                    required>
+                    id="contact"
+                    placeholder="Introduce tu numero de telefono"
+                    />
+                </div>
+            </div>
+            <div class="descripcion form-group">
+                <label for="descripcion_producto">Hace una breve despricion de lo que vas a vender</label>
+                <div>
+                    <textarea
+                    id="descripcion_producto"
+                    rows="4"
+                    placeholder="No te olvides datos importantes"
+                    class="col-12"
+                    
+                    ></textarea>
                 </div>
                 
-                
             </div>
-            <div class="adj_fotos">
+            <div class="form-group">
+                <h4>Categoria Seleccionada</h4>
                 <div>
-                    <p>Como se ve?</p>
-                    <div  class="fotos">
-                        <label for="foto1">Adjuntar foto 1</label>
-                        <input type="file" id="foto1" />
-                    </div>
-                    <div  class="fotos">
-                        <label for="foto2">Adjuntar foto 2</label>
-                        <input type="file" id="foto2" />
+                    <input type="radio" id="insumo" name="tipo_prod" value="insumo" checked />
+                    <label for="insumo">Insumo</label>
+                </div>
+                <div>
+                    <input type="radio" id="producto" name="tipo_prod" value="producto" />
+                    <label for="producto">Producto</label>
+                </div>
+                <div>
+                    <input type="radio" id="otros" name="tipo_prod" value="otros" />
+                    <label for="otros">Otros/Cursos/Servicios<label>
                     </div>
                     
-                    <div  class="fotos">
-                        <label for="foto3">Adjuntar foto 3</label>
-                        <input type="file" id="foto3" />
+                </div>
+                
+                <div class="valor form-group">
+                    <div>
+                        <label for="precio">Precio*
+                        </label>
+                        <input
+                        type="number"
+                        class="form-control"
+                        id="price"
+                        placeholder="Precio"
+                        required/>
+                    </div>
+                    
+                    <div>
+                        <label for="cantidad">Cantidad*</label>
+                        <input
+                        type="number"
+                        class="form-control"
+                        id="qty"
+                        placeholder="Cantidad"
+                        required>
+                    </div>
+                    
+                    
+                </div>
+                <div class="adj_fotos">
+                    <div>
+                        <p>Como se ve?</p>
+                        <div  class="fotos">
+                            <label for="foto1">Adjuntar foto 1</label>
+                            <input type="file" id="foto1" />
+                        </div>
+                        <div  class="fotos">
+                            <label for="foto2">Adjuntar foto 2</label>
+                            <input type="file" id="foto2" />
+                        </div>
+                        
+                        <div  class="fotos">
+                            <label for="foto3">Adjuntar foto 3</label>
+                            <input type="file" id="foto3" />
+                        </div>
                     </div>
                 </div>
+                <div>
+                    <input type="checkbox" id="ofertas" name="ofertas" value="Aceptas Ofertas?" checked />
+                    <label for="ofertas">Aceptas Ofertas?</label>
+                </div>
+                <div>
+                    <input type="checkbox" id="envio" name="envio" value="Haces Envios" />
+                    <label for="envios">Haces Envios?</label>
+                </div>
+                <div class="w-100 d-flex justify-content-center">
+                  <button type="submit" class="btn btn-outline-warning d-flex">Guardar y Enviar</button>
+                </div>
             </div>
-            <div>
-                <input type="checkbox" id="ofertas" name="ofertas" value="Aceptas Ofertas?" checked />
-                <label for="ofertas">Aceptas Ofertas?</label>
-            </div>
-            <div>
-                <input type="checkbox" id="envio" name="envio" value="Haces Envios" />
-                <label for="envios">Haces Envios?</label>
-            </div>
+            
         </div>
-        
-        
-        
-        
-        <div class="send-button text-center"> 
-            <button type="submit" class="btn btn-warning send_form">Guardar y Enviar</button>
-        </div>
-    </div>       
+    </section>
       
       <!--footer/franco -->
     <footer>
