--- a/views/register.ejs
+++ b/views/register.ejs
@@ -3,178 +3,11 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <title>Canilla Libre - Registro</title>
-    
-    <!--favicon-->
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-    <link rel="manifest" href="img/favicon/site.webmanifest">
-    <link rel="mask-icon" href="img/favicon/safari-pinned-tab.svg" color="#5bbad5">
-    <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="theme-color" content="#ffffff">
-    
-    <!--Googlefont LATO 300-400-700-->
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&display=swap" rel="stylesheet">
-    
-    <!--boostrap-->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    
-    <!-- Font Awesome Stylesheet -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
-    
-    <!--css Style-->
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/register_style.css">
-    
-    <!--boostrap script-->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-
-  </head>
+    <%- include("partials/head", {title: "Registro"}) %>
+    </head>
   <body>
     <!--header/javi -->
-    <header class="nav-header">
-      <div class="navborder">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light d-flex">
-    
-    
-          <!--search / xl-->
-          <div class="d-flex justify-content-end align-items-center w-100 ml-auto ">
-            <a class="navbar-brand" href="/">
-              <img src="img/header/logo_header.svg" width="120" class="d-inline-block align-top" alt="Canilla Libre">
-            </a>
-    
-    
-            <div class="input-group mb-3 col box-1 ml-auto">
-              <input type="text" class="form-control" placeholder="que queres tomar?" aria-label="buscador"
-                aria-describedby="search_header">
-              <div class="input-group-append">
-                <button class="btn btn-outline-warning" type="button" id="buscar_nav_header">
-                  <i class="fas fa-beer"></i></button>
-              </div>
-            </div>
-    
-            <button class="btn btn-outline-warning ml-auto" type="button">Vende</button>
-            <a class="nav-link text-black-50" href="#"><i class="fas fa-shopping-basket"></i></a>
-            <a class="nav-link text-black-50 d-none d-md-block" href="#"><i class="far fa-heart"></i></a>
-            <a class="nav-link text-black-50 d-none d-md-block" href="./register.ejs">Registro</i></a>
-            <a class="nav-link text-black-50 d-none d-md-block active" href="#">Inicio de Sesión</i></a>
-    
-            <!--nav mobile-->
-            <button class="navbar-toggler d-sm-block d-md-none" type="button" data-toggle="collapse"
-              data-target="#menu_desplegable">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-          </div>
-    
-          <div class="dropdown-divider"></div>
-          <div class="collapse navbar-collapse" id="menu_desplegable">
-            <ul class="navbar-nav mr-auto d-sm-block d-md-none">
-              <li class="nav-item active">
-                <a class="nav-link" href="#"><i class="fas fa-home"></i> Inicio<span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./register.ejs"><i class="far fa-user-circle"></i> Registrate</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#"><i class="far fa-heart"></i> Favoritos</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#"><i class="fas fa-dollar-sign"></i> Ofertas</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#"><i class="far fa-bell"></i> Mas Vendidos<span
-                    class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                  aria-haspopup="true" aria-expanded="false">
-                  <i class="fas fa-list-ul"></i> Categorias
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="#">Variedad de Cervezas</a>
-                  <a class="dropdown-item" href="#">Presentaciones</a>
-                  <a class="dropdown-item" href="#">Promociones</a>
-                  <a class="dropdown-item" href="#">Alquileres</a>
-                  <a class="dropdown-item" href="#">Merchandesing</a>
-                  <a class="dropdown-item" href="#">Insumos</a>
-                  <a class="dropdown-item" href="#">Cursos</a>
-                  <a class="dropdown-item" href="#">Podcast</a>
-                </div>
-              </li>
-              <div class="dropdown-divider"></div>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#"><i class="fas fa-bath"></i> Tiendas Oficiales</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#"><i class="fas fa-kiwi-bird"></i> Nosotros</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#"><i class="fas fa-headset"></i> Contacto</a>
-              </li>
-    
-            </ul>
-          </div>
-        </nav>
-      </div>
-      <!--search header mobile-->
-      <div class="input-group mb-3 col box-2 bg-light">
-        <input type="text" class="form-control" placeholder="que queres tomar?" aria-label="buscador"
-          aria-describedby="search_header">
-        <div class="input-group-append">
-          <button class="btn btn-outline-warning" type="button" id="buscar_nav_header">
-            <i class="fas fa-beer"></i></button>
-        </div>
-      </div>
-    
-      <!--nav md-xl-->
-      <div class="prueba d.flex justify-content-end">
-        <nav class="navbar navbar-expand-md navbar-light bg-light d-none d-md-block">
-          <ul class="navbar-nav ml-auto d-flex justify-content-end align-items-center">
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                aria-haspopup="true" aria-expanded="false">
-                <i class="fas fa-list-ul"></i> Categorias
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Variedad de Cervezas</a>
-                <a class="dropdown-item" href="#">Presentaciones</a>
-                <a class="dropdown-item" href="#">Promociones</a>
-                <a class="dropdown-item" href="#">Alquileres</a>
-                <a class="dropdown-item" href="#">Merchandesing</a>
-                <a class="dropdown-item" href="#">Insumos</a>
-                <a class="dropdown-item" href="#">Cursos</a>
-                <a class="dropdown-item" href="#">Podcast</a>
-              </div>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Ofertas</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Mas Vendidos</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Tiendas Oficiales</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Nosotros </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contacto</a>
-            </li>
-    
-          </ul>
-        </nav>
-      </div>
-    </header>
+    <%- include("partials/header") %> 
 
     <!--registro/diego-->
     <!-- Section es todo el contenedor -->
