modificacion del campo apellido de la view register

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -24,7 +24,7 @@
               <label for="firstname">Nombre</label>
               <input type="text" class="form-control" id="firstname" aria-describedby="emailHelp" required>
             </div>
-            <div class="form-group ml-2">
+            <div class="form-group">
               <label for="lastname">Apellido</label>
               <input type="text" class="form-control" id="lastname" aria-describedby="emailHelp" required>
             </div>
