--- a/public/css/register_style.css
+++ b/public/css/register_style.css
@@ -1,181 +1,22 @@
 :root {
-    --amarillo: #FDBE01;
-    --azul_oscuro:#2f4858;
-    --gris: #dfdfdf;
-    --azul_verde: #006674;
-    --verde: #87B235;
-    --facebook: #465996;
-    --gris_oscuro: rgb(33,37,41);
+  --amarillo: #fdbe01;
+  --azul_oscuro: #2f4858;
+  --gris: #dfdfdf;
+  --azul_verde: #006674;
+  --verde: #87b235;
+  --facebook: #465996;
+  --gris_oscuro: rgb(33, 37, 41);
 }
 
-
 body {
-  background: linear-gradient(to bottom, #FDBE01 50%, #f1f1f1 50%); /* W3C */
+  background: linear-gradient(to bottom, #fdbe01 50%, #f1f1f1 50%); /* W3C */
 }
 .container {
   margin-top: 80px;
 }
 
-.box_reg{
-  background-color: white;
-  border-radius: 1%;
-  padding: 20px;
-  margin: 5%;
-}
+/*---form_register---*/
 
-.hightlited a {
-  color: rgba(0, 81, 255, 0.774);
-  text-decoration: underline;
-}
-
-.name {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-.name .form-group {
-  flex-grow: 1;
-}
-.checkers {
-  display: flex;
-  flex-direction: column;
-  padding: 20px;
-  text-align: justify;
-}
-.checkers .form-check {
-  align-items: center;
-}
-
-.facebook {
-  color: #3b5998;
-  font-weight: bold;
-  text-align: center;
-  padding-top: 10px;
-}
-.withcount {
-  text-align: center;
-  padding-top: 10px;
-}
-
-/*-------------HEADER-------------*/
-.navborder {
-    
-    border-bottom: 2px solid var(--azul_oscuro);
-}
-
-.navbar {
-    padding-bottom: 0px !important;
-    padding:0.5rem 0.5rem;
-}
-
-.navbar-brand {
-    padding-bottom: 0px !important;
-    
-}
-
-.nav-link{
-    padding: 1rem 0.5rem;
-}
-
-.box-1 {
-    display: none;
-    margin-top:1em;
-}
-
-.box-2 {
-   padding:1em;
-}
-
-
-@media (min-width: 320px){
-    
-    .categorias-title {
-    padding: 1em;
-}
-    .venta_box h2{
-    font-size: 1.5em;
-    }
-    .venta_box h4{
-        
-        font-weight: 700;
-        text-transform: uppercase;
-    }
-    .venta_box p{
-        
-        font-weight: 400;
-        text-transform: uppercase;
-    }
-    .beer_ventas{
-        display: none;
-        
-    }
-    .slogan_ventas{
-        font-size: 1.8em;
-        margin:auto;
-    }
-    
-}
-
-@media (min-width: 375px){
-       
-
-    .beer_ventas{
-        display: none;
-        
-    }
-    .slogan_ventas{
-        font-size: 2em;
-        margin:auto;
-    }
-    
-}
-
-
-@media (min-width: 768px){
-    
-    .box-1 {
-        display: flex;
-    }
-
-    .box-2 {
-        display: none;
-    }
-     
-    .beer_ventas{
-        width: 140% !important;
-        top:-15em;
-        display: flex;
-        right: 0px;
-    }
-    .slogan_ventas{
-        font-size: 2em;
-        margin-left: 10%;
-    }
-    
-}
-
-
-@media (min-width: 1024px){
-    
-    .beer_ventas{
-        top:-15em;
-        display: flex;
-    }
-    .slogan_ventas{
-        font-size: 2.1em;
-    }
- 
-}
-
-@media (min-width: 1440px){
-    
-    .beer_ventas{
-        top:-18em;
-        display: flex;
-        
-    }
-    .slogan_ventas{
-        font-size: 3em;
-    }
- 
+.custom-file-label::after {
+  content: "Buscar" !important;
 }
