--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -38,7 +38,7 @@
 
 <!--css Style-->
 <link rel="stylesheet" href="css/style.css" />
-<link rel="stylesheet" href="register_style.css" />
+<link rel="stylesheet" href="css/register_style.css" />
 
 <!--boostrap script-->
 <script
