--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <%- include("partials/head", {title: "Home"}) %>
   </head>
-  <body>
+  <body class="home">
     <!--header/javi -->
     <%- include("partials/header") %>
 
