--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -39,6 +39,8 @@
 <!--css Style-->
 <link rel="stylesheet" href="css/style.css" />
 <link rel="stylesheet" href="css/register_style.css" />
+<link rel="stylesheet" href="css/product_detail.css" />
+<link rel="stylesheet" href="css/Product_cart.css" />
 
 <!--boostrap script-->
 <script
